--- a/index.html
+++ b/index.html
@@ -13,13 +13,23 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-  <!-- Dark Mode Toggle (visible in header) -->
-  <div id="themeToggle">
-    <button id="toggleDarkMode" aria-label="Toggle dark mode"><i class="fa-solid fa-moon"></i></button>
-  </div>
+  <!-- Header with Dark Mode Toggle -->
+  <header class="site-header">
+    <h1>LonelyLessAustralia Decision Aid Tool</h1>
+    <p>
+      This tool helps you evaluate programme configurations for reducing loneliness.
+      It explains how costs and benefits are calculated so that even lay users, decision makers, and policy makers can understand the trade‑offs.
+    </p>
+    <button id="toggleDarkMode" aria-label="Toggle dark mode">
+      <i class="fa-solid fa-moon"></i>
+    </button>
+  </header>
+
+  <!-- Hamburger Button for Mobile (always visible) -->
+  <button id="openSidebar" aria-label="Open Menu"><i class="fa-solid fa-bars"></i></button>
 
   <!-- Collapsible Sidebar for Mobile Navigation -->
-  <div id="sidebar" class="sidebar">
+  <aside id="sidebar" class="sidebar">
     <button id="closeSidebar" aria-label="Close Menu"><i class="fa-solid fa-times"></i></button>
     <nav class="sidebar-nav" role="tablist">
       <button class="tablink" data-tab="introTab" aria-selected="false">
@@ -47,18 +57,11 @@
         <i class="fa-solid fa-folder-open"></i><span> Saved Scenarios</span>
       </button>
     </nav>
-  </div>
-  <!-- Hamburger Button (visible on mobile) -->
-  <button id="openSidebar" aria-label="Open Menu"><i class="fa-solid fa-bars"></i></button>
+  </aside>
 
-  <!-- Main Content Container with limited width -->
-  <div id="mainContent" class="main-content">
-    <header>
-      <h1>LonelyLessAustralia Decision Aid Tool</h1>
-      <p>This tool helps you evaluate programme configurations for reducing loneliness. It explains how costs and benefits are calculated so that even lay users can understand the trade‐offs.</p>
-    </header>
-
-    <!-- Navigation Tabs (desktop) -->
+  <!-- Main Content -->
+  <main id="mainContent">
+    <!-- Navigation Tabs for Desktop -->
     <nav class="tabs" role="tablist">
       <button class="tablink active" data-tab="introTab" aria-selected="true">
         <i class="fa-solid fa-info-circle"></i><span> Introduction</span>
@@ -90,16 +93,17 @@
     <section id="introTab" class="tabcontent" tabindex="0" style="display: block;">
       <div class="intro-box">
         <p>
-          Loneliness affects over five million Australians, particularly older adults, causing significant health and economic challenges. This tool uses discrete choice experiment estimates to predict programme uptake probabilities, enabling personalised services based on the attributes older adults value most.
+          Loneliness affects over five million Australians, particularly older adults, causing significant health and economic challenges.
+          This tool uses discrete choice experiment estimates to predict programme uptake probabilities, enabling personalised services based on the attributes older adults value most.
         </p>
         <ul>
-          <li><strong>Instructions</strong> – Step-by-step guidance.</li>
-          <li><strong>Attributes</strong> – Detailed explanation of programme features (hover over info icons for extra details, including reference levels except for cost).</li>
-          <li><strong>Inputs</strong> – Configure your scenario parameters using visually appealing level cards.</li>
+          <li><strong>Instructions</strong> – Step-by-step guidance on how to use the tool.</li>
+          <li><strong>Attributes</strong> – Detailed explanation of each programme feature (hover over icons for extra details and reference levels, except for cost).</li>
+          <li><strong>Inputs</strong> – Configure your scenario using clear level cards.</li>
           <li><strong>WTP Results</strong> – View charts showing willingness-to-pay estimates.</li>
-          <li><strong>Predicted Uptake</strong> – See the predicted uptake percentage with dynamic recommendations.</li>
-          <li><strong>Costs &amp; Benefits</strong> – Analyse cost components and QALY-based benefits with interactive sliders and educational summaries.</li>
-          <li><strong>Saved Scenarios</strong> – Compare and export your saved configurations.</li>
+          <li><strong>Predicted Uptake</strong> – See the predicted uptake percentage with tailored recommendations.</li>
+          <li><strong>Costs &amp; Benefits</strong> – Analyse detailed cost breakdown and QALY-based benefits.</li>
+          <li><strong>Saved Scenarios</strong> – Compare, export, and download your saved configurations.</li>
         </ul>
       </div>
     </section>
@@ -109,11 +113,11 @@
       <div class="calculation-info">
         <h4>How to Use This Tool</h4>
         <ol>
-          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over info icons for details and reference levels (except for cost per session).</li>
-          <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards. All features (except method) are required; if no method is selected, in-person is assumed.</li>
+          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over info icons for details and reference levels (except cost per session).</li>
+          <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards. All features (except method) are required; if no method is selected, in‑person is assumed.</li>
           <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to immediately see your results in a popup modal.</li>
           <li style="margin-left: 20px;">Examine the <strong>WTP Results</strong> tab for monetary values assigned to each attribute.</li>
-          <li style="margin-left: 20px;">Check the <strong>Predicted Uptake</strong> tab for the uptake percentage and dynamic recommendations (also shown in the popup).</li>
+          <li style="margin-left: 20px;">Check the <strong>Predicted Uptake</strong> tab for the uptake percentage and tailored recommendations (also shown in the modal popup).</li>
           <li style="margin-left: 20px;">Review the <strong>Costs &amp; Benefits</strong> tab for a detailed breakdown and chart.</li>
           <li style="margin-left: 20px;">Save and compare scenarios in the <strong>Saved Scenarios</strong> tab or export reports in PDF and CSV formats.</li>
         </ol>
@@ -132,7 +136,7 @@
               <path d="M10 15l-3-3 1.4-1.4 1.6 1.6L15 7l1.4 1.4-6.4 6.4z" fill="#2980b9"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              The out-of-pocket fee (in AUD) participants pay per session.
+              The out‑of‑pocket fee (in AUD) that participants pay per session.
             </div>
           </div>
           <div class="attribute-content">
@@ -148,7 +152,7 @@
               <path d="M12 4a8 8 0 0 1 0 16 8 8 0 0 1 0-16z" fill="#e67e22"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              <strong>Reference: At Home</strong><br/>Offered locally (up to 12 km) versus in a wider community (50+ km).
+              <strong>Reference: At Home</strong><br/>Delivered locally (up to 12 km) versus in a wider community (50+ km).
             </div>
           </div>
           <div class="attribute-content">
@@ -164,7 +168,7 @@
               <path d="M12 6v6l4 2" stroke="#27ae60" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              <strong>Reference: Daily</strong><br/>Weekly sessions encourage more regular engagement than monthly.
+              <strong>Reference: Daily</strong><br/>Weekly sessions offer more regular engagement than monthly.
             </div>
           </div>
           <div class="attribute-content">
@@ -180,7 +184,7 @@
               <path d="M8 12h8M12 8v8" stroke="#8e44ad" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              <strong>Reference: In-person</strong><br/>Virtual sessions are online; hybrid sessions blend both.
+              <strong>Reference: In‑person</strong><br/>Virtual sessions occur online; hybrid sessions mix both.
             </div>
           </div>
           <div class="attribute-content">
@@ -196,12 +200,12 @@
               <path d="M12 6v6l4 2" stroke="#3498db" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              <strong>Reference: 30-minute</strong><br/>Longer sessions (2 or 4 hours) affect depth and scheduling.
+              <strong>Reference: 30‑minute</strong><br/>Longer sessions (2 or 4 hours) affect the depth and scheduling.
             </div>
           </div>
           <div class="attribute-content">
             <h4>Duration of Each Interaction</h4>
-            <p>2-hour or 4-hour sessions.</p>
+            <p>2‑hour or 4‑hour sessions.</p>
           </div>
         </div>
         <!-- Attribute Card 6: Type of Support Programme -->
@@ -212,12 +216,12 @@
               <path d="M8 12l2-2 4 4 6-6" stroke="#e74c3c" stroke-width="2" fill="none"/>
             </svg>
             <div class="tooltip" role="tooltip">
-              <strong>Reference: Peer Support</strong><br/>Options include community engagement, counselling, or VR-based sessions.
+              <strong>Reference: Peer Support</strong><br/>Options include community engagement, counselling, or VR‑based sessions.
             </div>
           </div>
           <div class="attribute-content">
             <h4>Type of Support Programme</h4>
-            <p>Community engagement, counselling, or VR-based sessions.</p>
+            <p>Community engagement, counselling, or VR‑based sessions.</p>
           </div>
         </div>
       </div>
@@ -250,7 +254,7 @@
             </div>
             <!-- Method Card -->
             <div class="input-level-card">
-              <h3>Method <span class="reference">(Reference: In-person)</span></h3>
+              <h3>Method <span class="reference">(Reference: In‑person)</span></h3>
               <div class="options">
                 <label>
                   <input type="radio" name="method" id="virtualCheck" value="virtual" />
@@ -258,7 +262,7 @@
                 </label>
                 <label>
                   <input type="radio" name="method" id="hybridCheck" value="hybrid" />
-                  Hybrid (In-person &amp; Virtual)
+                  Hybrid (In‑person &amp; Virtual)
                 </label>
               </div>
             </div>
@@ -278,15 +282,15 @@
             </div>
             <!-- Duration Card -->
             <div class="input-level-card">
-              <h3>Duration <span class="reference">(Reference: 30-minute)</span></h3>
+              <h3>Duration <span class="reference">(Reference: 30‑minute)</span></h3>
               <div class="options">
                 <label>
                   <input type="radio" name="duration" id="twoHCheck" value="2hr" />
-                  2-hour Interaction
+                  2‑hour Interaction
                 </label>
                 <label>
                   <input type="radio" name="duration" id="fourHCheck" value="4hr" />
-                  4-hour Interaction
+                  4‑hour Interaction
                 </label>
               </div>
             </div>
@@ -322,10 +326,10 @@
                 <label for="state_select">
                   <i class="fa-solid fa-map-marker-alt"></i> State:
                   <span class="info-container">
-                    <button class="info-button" aria-label="Choose your state to adjust for cost-of-living differences." tabindex="0">
+                    <button class="info-button" aria-label="Choose your state to adjust for cost‑of‑living differences." tabindex="0">
                       <i class="fa-solid fa-info-circle"></i>
                     </button>
-                    <span class="tooltip-text">Choose your state to adjust for cost-of-living differences.</span>
+                    <span class="tooltip-text">Select your state to apply cost‑of‑living multipliers.</span>
                   </span>
                 </label>
                 <select id="state_select">
@@ -342,10 +346,10 @@
                 <label for="adjustCosts">
                   <i class="fa-solid fa-sync-alt"></i> Adjust for Cost of Living?
                   <span class="info-container">
-                    <button class="info-button" aria-label="Select Yes to apply cost-of-living multipliers for the chosen state." tabindex="0">
+                    <button class="info-button" aria-label="Select Yes to apply cost‑of‑living multipliers." tabindex="0">
                       <i class="fa-solid fa-info-circle"></i>
                     </button>
-                    <span class="tooltip-text">Select Yes to apply cost-of-living multipliers for the chosen state.</span>
+                    <span class="tooltip-text">Select Yes if you wish to adjust for local cost‑of‑living differences.</span>
                   </span>
                 </label>
                 <select id="adjustCosts">
@@ -374,10 +378,12 @@
       <div class="calculation-info">
         <h4>Willingness-to-Pay (WTP) Results</h4>
         <p>
-          The willingness-to-pay (WTP) for each programme attribute is calculated by taking the ratio of the attribute’s coefficient to the negative of the cost coefficient. This metric quantifies the monetary value respondents place on each programme attribute, holding other factors constant.
+          The willingness-to-pay (WTP) for each programme attribute is calculated by taking the ratio of the attribute’s coefficient to the negative of the cost coefficient.
+          This metric quantifies the monetary value respondents place on each programme attribute, holding other factors constant.
         </p>
         <p>
-          For example, among the programme types, community engagement is the most highly valued, with a WTP of A$14.47 (SE=3.31, p &lt; 0.001). This shows older adults are willing to pay an additional A$14.47 for community-based programmes, compared to the reference peer support scenario.
+          For example, among the programme types, community engagement is the most highly valued, with a WTP of A$14.47 (SE=3.31, p &lt; 0.001).
+          This shows older adults are willing to pay an additional A$14.47 for community-based programmes compared to the reference peer support scenario.
         </p>
         <div class="buttons-row">
           <button onclick="renderWTPChart()">Show WTP Charts</button>
@@ -395,7 +401,7 @@
     <section id="probTab" class="tabcontent" tabindex="0">
       <div class="calculation-info">
         <h4>Predicted Programme Uptake</h4>
-        <p>Click “Show Probability Plot” to compute the predicted programme uptake percentage.</p>
+        <p>Click “Show Probability Plot” to compute the predicted uptake percentage.</p>
         <div class="buttons-row">
           <button onclick="renderProbChart()">Show Probability Plot</button>
         </div>
@@ -420,12 +426,15 @@
             <option value="high">High (0.1 QALYs)</option>
           </select>
         </div>
-        <div id="costsBenefitsResults"></div>
+        <div id="costsBenefitsResults">
+          <!-- Summary and chart will render here -->
+        </div>
         <div class="modelling-assumptions">
           <h3><i class="fa-solid fa-lightbulb"></i> Modelling Assumptions</h3>
           <p>
-            Our analysis uses interactive cost sliders, pop-up info boxes, and educational summaries to explain how costs and benefits are calculated.
-            <br/><strong>Reference:</strong> Engel, L., Lee, Y. Y., Le, L. K. D., Lal, A., &amp; Mihalopoulos, C. (2021). Reducing loneliness to prevent depression in older adults in Australia: A modelled cost-effectiveness analysis. <em>Mental Health and Prevention, 24</em>. <a href="https://doi.org/10.1016/j.mhp.2021.200212" target="_blank">https://doi.org/10.1016/j.mhp.2021.200212</a>
+            Our analysis uses interactive cost sliders, informative tooltips, and clear educational summaries to explain how costs and benefits are calculated.
+            <br/><strong>Reference:</strong> Engel, L., Lee, Y. Y., Le, L. K. D., Lal, A., &amp; Mihalopoulos, C. (2021). Reducing loneliness to prevent depression in older adults in Australia: A modelled cost-effectiveness analysis. <em>Mental Health and Prevention, 24</em>.
+            <a href="https://doi.org/10.1016/j.mhp.2021.200212" target="_blank">https://doi.org/10.1016/j.mhp.2021.200212</a>
           </p>
         </div>
         <div class="cost-icons">
@@ -464,14 +473,14 @@
             <p><strong>Total Cost:</strong> A$499.90</p>
           </div>
           <div class="cost-card">
-            <h4><i class="fa-solid fa-chalkboard-teacher"></i> Trainer Cost for 5-hour Training Sessions</h4>
+            <h4><i class="fa-solid fa-chalkboard-teacher"></i> Trainer Cost for 5‑hour Training Sessions</h4>
             <p><strong>Value:</strong> A$223.86</p>
             <p><strong>Quantity:</strong> 100</p>
             <p><strong>Unit Cost:</strong> A$223.86</p>
             <p><strong>Total Cost:</strong> A$22386.00</p>
           </div>
           <div class="cost-card">
-            <h4><i class="fa-solid fa-percent"></i> On-Costs (30%)</h4>
+            <h4><i class="fa-solid fa-percent"></i> On‑Costs (30%)</h4>
             <p><strong>Value:</strong> A$44.77</p>
             <p><strong>Quantity:</strong> 100</p>
             <p><strong>Unit Cost:</strong> A$44.77</p>
@@ -546,8 +555,8 @@
                 <th>Monthly?</th>
                 <th>Virtual?</th>
                 <th>Hybrid?</th>
-                <th>2-Hour?</th>
-                <th>4-Hour?</th>
+                <th>2‑Hour?</th>
+                <th>4‑Hour?</th>
                 <th>Community?</th>
                 <th>Counselling?</th>
                 <th>VR?</th>
@@ -564,15 +573,20 @@
     <footer>
       <p>&copy; 2025 LonelyLessAustralia. All Rights Reserved.<br />Mesfin Genie, Newcastle Business School, The University of Newcastle, Australia</p>
     </footer>
-  </div>
+  </main>
 
   <!-- Onboarding Modal -->
   <div id="onboardingModal" class="modal">
     <div class="modal-content">
       <span class="close-button" onclick="closeOnboarding()">&times;</span>
       <h4>Welcome to LonelyLessAustralia!</h4>
-      <p>Use the navigation menu (hamburger icon on mobile) to explore the tool. Hover over info icons for additional guidance. You can switch between light and dark modes using the toggle button at the top.</p>
-      <p>Click the close button to start your guided tour.</p>
+      <p>
+        Explore the tool by using the navigation tabs or the menu (hamburger icon) on mobile. Each section is designed to guide you through programme attributes, input configuration, cost‑benefit analysis, and scenario comparisons.
+      </p>
+      <p>
+        Hover over the info icons to learn more about each feature. Use the dark mode toggle at the top right to switch themes.
+      </p>
+      <p>Click the close button to begin your guided tour.</p>
     </div>
   </div>
 
