--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
   <header class="site-header">
     <h1>LonelyLessAustralia Decision Aid Tool</h1>
     <p>
-      This tool helps you evaluate programme configurations for reducing loneliness.
-      It explains how costs and benefits are calculated so that even lay users, decision makers, and policy makers can understand the trade‑offs.
+      This tool helps you evaluate programme configurations for reducing loneliness among older adults (65 years and above) in Australia.
     </p>
     <button id="toggleDarkMode" aria-label="Toggle dark mode">
       <i class="fa-solid fa-moon"></i>
@@ -98,7 +97,7 @@
         </p>
         <ul>
           <li><strong>Instructions</strong> – Step-by-step guidance on how to use the tool.</li>
-          <li><strong>Attributes</strong> – Detailed explanation of each programme feature (hover over icons for extra details and reference levels, except for cost).</li>
+          <li><strong>Attributes</strong> – Detailed explanation of each programme feature (hover over icons for extra details and reference levels).</li>
           <li><strong>Inputs</strong> – Configure your scenario using clear level cards.</li>
           <li><strong>WTP Results</strong> – View charts showing willingness-to-pay estimates.</li>
           <li><strong>Predicted Uptake</strong> – See the predicted uptake percentage with tailored recommendations.</li>
@@ -113,11 +112,11 @@
       <div class="calculation-info">
         <h4>How to Use This Tool</h4>
         <ol>
-          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over info icons for details and reference levels (except cost per session).</li>
+          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over info icons for details and reference levels.</li>
           <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards. All features (except method) are required; if no method is selected, in‑person is assumed.</li>
-          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to immediately see your results in a popup modal.</li>
+          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to see your results.</li>
           <li style="margin-left: 20px;">Examine the <strong>WTP Results</strong> tab for monetary values assigned to each attribute.</li>
-          <li style="margin-left: 20px;">Check the <strong>Predicted Uptake</strong> tab for the uptake percentage and tailored recommendations (also shown in the modal popup).</li>
+          <li style="margin-left: 20px;">Check the <strong>Predicted Uptake</strong> tab for the uptake percentage and tailored recommendations.</li>
           <li style="margin-left: 20px;">Review the <strong>Costs &amp; Benefits</strong> tab for a detailed breakdown and chart.</li>
           <li style="margin-left: 20px;">Save and compare scenarios in the <strong>Saved Scenarios</strong> tab or export reports in PDF and CSV formats.</li>
         </ol>
