--- a/index.html
+++ b/index.html
@@ -13,53 +13,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 </head>
 <body>
-  <!-- Standard container -->
   <div class="container">
-    <!-- Header with dark mode toggle -->
+    <!-- Header -->
     <header>
       <h1>LonelyLessAustralia Decision Aid Tool</h1>
       <p>
         This tool helps you evaluate programme configurations for reducing loneliness.
         It explains how costs and benefits are calculated so that even lay users, decision makers, and policy makers can understand the trade‑offs.
       </p>
-      <button id="toggleDarkMode" aria-label="Toggle dark mode"><i class="fa-solid fa-moon"></i></button>
+      <button id="toggleDarkMode" aria-label="Toggle dark mode">
+        <i class="fa-solid fa-moon"></i>
+      </button>
     </header>
 
-    <!-- Mobile Hamburger Button -->
-    <button id="openSidebar" aria-label="Open Menu"><i class="fa-solid fa-bars"></i></button>
-
-    <!-- Collapsible Sidebar for Mobile Navigation -->
-    <aside id="sidebar" class="sidebar">
-      <button id="closeSidebar" aria-label="Close Menu"><i class="fa-solid fa-times"></i></button>
-      <nav class="sidebar-nav" role="tablist">
-        <button class="tablink" data-tab="introTab" aria-selected="false">
-          <i class="fa-solid fa-info-circle"></i><span> Introduction</span>
-        </button>
-        <button class="tablink" data-tab="instructionsTab" aria-selected="false">
-          <i class="fa-solid fa-circle-question"></i><span> Instructions</span>
-        </button>
-        <button class="tablink" data-tab="attributesTab" aria-selected="false">
-          <i class="fa-solid fa-list"></i><span> Attributes</span>
-        </button>
-        <button class="tablink" data-tab="inputsTab" aria-selected="false">
-          <i class="fa-solid fa-sliders"></i><span> Inputs</span>
-        </button>
-        <button class="tablink" data-tab="wtpTab" aria-selected="false">
-          <i class="fa-solid fa-chart-bar"></i><span> WTP Results</span>
-        </button>
-        <button class="tablink" data-tab="probTab" aria-selected="false">
-          <i class="fa-solid fa-chart-pie"></i><span> Predicted Uptake</span>
-        </button>
-        <button class="tablink" data-tab="costsTab" aria-selected="false">
-          <i class="fa-solid fa-calculator"></i><span> Costs &amp; Benefits</span>
-        </button>
-        <button class="tablink" data-tab="scenariosTab" aria-selected="false">
-          <i class="fa-solid fa-folder-open"></i><span> Saved Scenarios</span>
-        </button>
-      </nav>
-    </aside>
-
-    <!-- Navigation Tabs (Desktop) -->
+    <!-- Navigation Tabs -->
     <nav class="tabs" role="tablist">
       <button class="tablink active" data-tab="introTab" aria-selected="true">
         <i class="fa-solid fa-info-circle"></i><span> Introduction</span>
@@ -86,8 +53,6 @@
         <i class="fa-solid fa-folder-open"></i><span> Saved Scenarios</span>
       </button>
     </nav>
-
-    <!-- Content Sections -->
 
     <!-- Introduction Tab -->
     <section id="introTab" class="tabcontent" tabindex="0" style="display: block;">
@@ -397,7 +362,7 @@
       </div>
     </section>
 
-    <!-- Predicted Programme Uptake Tab -->
+    <!-- Predicted Uptake Tab -->
     <section id="probTab" class="tabcontent" tabindex="0">
       <div class="calculation-info">
         <h4>Predicted Programme Uptake</h4>
@@ -581,11 +546,11 @@
       <span class="close-button" onclick="closeOnboarding()">&times;</span>
       <h4>Welcome to LonelyLessAustralia!</h4>
       <p>
-        Use the navigation tabs above (or the menu on mobile) to explore each section of this tool.
-        <br/><strong>Attributes:</strong> Learn about each programme feature by hovering over the info icons.
+        Use the navigation tabs above to explore each section of this tool.
+        <br/><strong>Attributes:</strong> Hover over the info icons to learn about each programme feature.
         <br/><strong>Inputs:</strong> Configure your scenario using the clear level cards.
-        <br/><strong>WTP & Uptake:</strong> View detailed cost‑benefit and uptake analyses with dynamic recommendations.
-        <br/><strong>Reports:</strong> Save your scenarios and download them as PDF or CSV.
+        <br/><strong>WTP &amp; Uptake:</strong> View detailed analyses and tailored recommendations.
+        <br/><strong>Reports:</strong> Save your scenarios and export them as PDF or CSV.
       </p>
       <p>Click the close button to begin your guided tour.</p>
     </div>
