--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <header>
       <h1>LonelyLessAustralia Decision Aid Tool</h1>
       <p>
-        This tool helps you evaluate programme configurations for reducing loneliness.
-        It explains how costs and benefits are calculated so that even lay users, decision makers, and policy makers can understand the trade‑offs.
+        This tool helps you evaluate programme configurations for reducing loneliness among older adults in Australia.
       </p>
       <button id="toggleDarkMode" aria-label="Toggle dark mode">
         <i class="fa-solid fa-moon"></i>
@@ -63,8 +62,8 @@
         </p>
         <ul>
           <li><strong>Instructions</strong> – Step-by-step guidance on how to use the tool.</li>
-          <li><strong>Attributes</strong> – Detailed explanation of each programme feature (hover over info icons for extra details and reference levels, except for cost).</li>
-          <li><strong>Inputs</strong> – Configure your scenario using clear level cards.</li>
+          <li><strong>Attributes</strong> – Detailed explanation of each programme feature (hover over info icons for extra details and reference levels).</li>
+          <li><strong>Inputs</strong> – Configure your scenario using level cards.</li>
           <li><strong>WTP Results</strong> – View charts showing willingness-to-pay estimates.</li>
           <li><strong>Predicted Uptake</strong> – See the predicted uptake percentage with tailored recommendations.</li>
           <li><strong>Costs &amp; Benefits</strong> – Analyze detailed cost breakdown and QALY-based benefits.</li>
@@ -78,11 +77,11 @@
       <div class="calculation-info">
         <h4>How to Use This Tool</h4>
         <ol>
-          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over info icons for details and reference levels (except cost per session).</li>
+          <li style="margin-left: 20px;">Review the <strong>Attributes</strong> tab to understand each programme feature. Hover over info icons for details and reference levels.</li>
           <li style="margin-left: 20px;">Configure your scenario in the <strong>Inputs</strong> tab using the level cards. All features (except method) are required; if no method is selected, in‑person is assumed.</li>
-          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to immediately see your results in a popup modal.</li>
+          <li style="margin-left: 20px;">Click “Calculate &amp; View Results” to see your results.</li>
           <li style="margin-left: 20px;">Examine the <strong>WTP Results</strong> tab for monetary values assigned to each attribute.</li>
-          <li style="margin-left: 20px;">Check the <strong>Predicted Uptake</strong> tab for the uptake percentage and tailored recommendations (also shown in the modal popup).</li>
+          <li style="margin-left: 20px;">Check the <strong>Predicted Uptake</strong> tab for the uptake percentage and tailored recommendations.</li>
           <li style="margin-left: 20px;">Review the <strong>Costs &amp; Benefits</strong> tab for a detailed breakdown and chart.</li>
           <li style="margin-left: 20px;">Save and compare scenarios in the <strong>Saved Scenarios</strong> tab or export reports in PDF and CSV formats.</li>
         </ol>
@@ -548,7 +547,7 @@
       <p>
         Use the navigation tabs above to explore each section of this tool.
         <br/><strong>Attributes:</strong> Hover over the info icons to learn about each programme feature.
-        <br/><strong>Inputs:</strong> Configure your scenario using the clear level cards.
+        <br/><strong>Inputs:</strong> Configure your scenario using the level cards.
         <br/><strong>WTP &amp; Uptake:</strong> View detailed analyses and tailored recommendations.
         <br/><strong>Reports:</strong> Save your scenarios and export them as PDF or CSV.
       </p>
